--- a/document.bib
+++ b/document.bib
@@ -45,3 +45,15 @@
       archivePrefix={arXiv},
       primaryClass={cs.NA}
 }
+@misc{interet2020servicespublics,
+	title={Services publics, biens communs de la République --- Épisode III, 11 principes pour les Services publics du XXIe siècle},
+	author={Intérêt Général},
+	year={2020},
+	publisher={Intérêt Général}
+}
+@misc{interet2019europe,
+	title={ Traités européens~: scénario pour une rupture},
+	author={Intérêt Général},
+	year={2019},
+	publisher={Intérêt Général}
+}
