--- a/document.tex
+++ b/document.tex
@@ -55,7 +55,7 @@ Il nous faut acter l’échec des politiques menées depuis trente ans : nous so
 
 S’il est devenu impensable de développer seul une pile matérielle et logicielle complète, il est irresponsable de n’en maîtriser plus qu’une portion si mince. À des degrés divers, les infrastructures stratégiques de défense ou d’énergie comme les communications grand public doivent reposer, du moins en partie, sur des solutions nationales ou a minima sur des solutions de partenariats internationaux. 
 
-Le développement et la sécurisation de solutions indépendantes passeront nécessairement par une recherche publique renforcée, des investissements publics massifs, un protectionnisme assumé et la sécurisation des capitaux investis, via des prises de participations majoritaires dans certaines structures de droit privé. Certaines mesures envisagées dans ce document, comme la constitution de monopoles publics sur les réseaux ou le financement direct d’entreprises par l’État peuvent rentrer en conflit avec les traités européens (voir Intérêt général, « Traités européens~: scénario pour une rupture », note\#2, septembre 2019). 
+Le développement et la sécurisation de solutions indépendantes passeront nécessairement par une recherche publique renforcée, des investissements publics massifs, un protectionnisme assumé et la sécurisation des capitaux investis, via des prises de participations majoritaires dans certaines structures de droit privé. Certaines mesures envisagées dans ce document, comme la constitution de monopoles publics sur les réseaux ou le financement direct d’entreprises par l’État peuvent rentrer en conflit avec les traités européens\cite{interet2019europe}. 
 
 Un écosystème numérique souverain repose sur certains éléments fondamentaux : le processeur (ou plus généralement les composants électroniques), le système d’exploitation et les compilateurs, le réseau et le cloud. Sans ces briques-là, aujourd’hui aux mains des USA ou de la Chine, nos éditeurs logiciels sont à la merci des plateformes sur lesquelles ils opèrent. Si le numérique était le ferroviaire, les USA et la Chine feraient les motrices, les caténaires, les gares, les rails et le ballast pendant que nos entreprises se feraient concurrence au wagon bar. Reconstruire un environnement souverain dans ces domaines suppose de l’humilité devant l’immensité de la tâche. Pourtant ce n’est pas insurmontable, à condition de sauver ce qui existe encore, d’investir intelligemment, de bâtir des partenariats bilatéraux stratégiques et d’accepter d’apprendre ou de réapprendre en faisant. Tout défi porte sa part de risque et d’erreurs. Mais les enjeux sont trop élevés pour abandonner notre souveraineté.
 
@@ -224,7 +224,7 @@ L’acquisition d’ARM (et le contrôle partiel des FAB –-- voir \textit{supr
 \section*{Conclusion~: Serviles ou maîtres de notre destin ?}
 Le chantier pour recouvrer la souveraineté numérique est immense, la situation s'étant aujourd'hui considérablement dégradée suite aux trahisons et sabotages commis par les tenants de l'idéologie néolibérale et les acteurs du profit privé. Le préalable à tout rebond est l'existence d'une volonté politique forte, comparable à celle des forces qui résistèrent à la capitulation et à l'indignité Vichyste en 1940, à celle du CNR pour la reconstruction du pays en 1945. À l’image de l’après-guerre, la France doit sortir de la dépendance américaine et chinoise. Seule la planification, autant démocratique qu’écologique est en mesure de relever ces défis immenses.
 
-Il s'agit d’affronter des adversaires déterminés et puissants. Les moyens financiers des géants du secteurs sont immenses, ils disposent de relais puissants au sein des institutions de l'Union européenne et à la technostructure française qui a théorisé et construit son impuissance. À l’image d'un nécessaire retour de l’État planificateur et stratège (voir Intérêt général, Services publics, biens communs de la République --- Épisode III, 11 principes pour les Services publics du XXIe siècle, note \#7, mai 2020), cette ambition collective doit passer par l'intégration du temps long et une vision globale de stratégies industrielles incluant les dimensions climatiques et écologiques. 
+Il s'agit d’affronter des adversaires déterminés et puissants. Les moyens financiers des géants du secteurs sont immenses, ils disposent de relais puissants au sein des institutions de l'Union européenne et à la technostructure française qui a théorisé et construit son impuissance. À l’image d'un nécessaire retour de l’État planificateur et stratège\cite{interet2020servicespublics}, cette ambition collective doit passer par l'intégration du temps long et une vision globale de stratégies industrielles incluant les dimensions climatiques et écologiques. 
  
 Cette approche est aux antipodes d’un discours basé sur la « start-up Nation ». Une start-up est par nature une jeune entreprise visant une création de valeur actionnariale sur des objectifs de marché identifiables voire court-termistes. Elle se cantonne le plus souvent à des produits précis sans vision globale ni apport structurant. Il ne s'agit pas ici de décourager l'innovation ou de nier l’ambition technologique de certains projets. Mais c’est une erreur funeste de faire reposer une stratégie sur cette approche minimale pour une puissance publique industrielle souveraine comme la France.
 
