--- a/document.tex
+++ b/document.tex
@@ -221,6 +221,7 @@ L’acquisition d’ARM (et le contrôle partiel des FAB –-- voir \textit{supr
 
 À l’échelle internationale, nous devons continuer à plaider pour l’intégration de tous les organismes normalisateurs américains (NIST, ICANN, certificats racines, etc.) au sein de l’ONU et en faire des organisations non lucratives et indépendantes des États. La puissance américaine ne cèdera pas ses prérogatives sans lutter mais seule l’ONU et le multilatéralisme ont la légitimité pour réguler le bien public mondial qu’est internet.
 
+\addcontentsline{toc}{section}{Conclusion~: Serviles ou maîtres de notre destin ?}
 \section*{Conclusion~: Serviles ou maîtres de notre destin ?}
 Le chantier pour recouvrer la souveraineté numérique est immense, la situation s'étant aujourd'hui considérablement dégradée suite aux trahisons et sabotages commis par les tenants de l'idéologie néolibérale et les acteurs du profit privé. Le préalable à tout rebond est l'existence d'une volonté politique forte, comparable à celle des forces qui résistèrent à la capitulation et à l'indignité Vichyste en 1940, à celle du CNR pour la reconstruction du pays en 1945. À l’image de l’après-guerre, la France doit sortir de la dépendance américaine et chinoise. Seule la planification, autant démocratique qu’écologique est en mesure de relever ces défis immenses.
 
