--- a/document.tex
+++ b/document.tex
@@ -69,7 +69,7 @@ Le terme « dématérialisation », très largement utilisé pour qualifier la t
 
 La question de la quantité des matériaux constitutifs des machines et des réseaux numériques est directement liée à celle de leur qualité.  Outre les grands métaux tels que l’aluminium, le fer, le silicium, abondants dans la croûte terrestre, et le cuivre qui l’est moins, le numérique mobilise nombre de « petits métaux » ou « métaux technologiques » (tantale, gallium, germanium, etc.) et de terres rares (néodyme, dysprosium, etc.), dont la concentration ne s’exprime plus en pourcentages mais en parties par million. Il mobilise aussi des métaux précieux (or, argent, platinoïdes) dont la concentration dans la croûte terrestre s’exprime en parties par milliard. La miniaturisation des puces, mémoires et appareils numériques et l’accroissement de la capacité des machines informatiques et des réseaux n’ont pu se réaliser qu’au prix du recours à des métaux de plus en plus nombreux et rares. Un ordinateur en mobilisait une vingtaine dans les années 1980, mais plus de 60 aujourd’hui.
 
-La maîtrise du numérique passe par celle de la chaîne d’approvisionnement en ces ressources terrestres, jugées critiques jusque dans les rapports de l’UE . Or leur extraction se trouve aujourd’hui concentrée dans un petit nombre de pays. La Chine produit 95% des terres rares consommées dans le monde et plus de 50\% de 13 autres minerais, dont le gallium, l’indium et même le silicium, élément pourtant très abondant sur terre. L’Afrique du Sud concentre 70\% de la production de platine et plus de 80\% de celle des autres platinoïdes, le Chili 80 % de celle du niobium, la République démocratique du Congo deux tiers de celle du cobalt\cite{eucriticalrawmaterials}. Ce déséquilibre résulte de la mondialisation des échanges et de la circulation des capitaux~: l’extraction des ressources terrestres est privilégiée dans les régions du monde où son coût est le plus bas, du fait d’une concentration en minerai relativement plus élevée ou d’un faible coût du travail –-- souvent des deux à la fois. Elle résulte aussi de politiques délibérées d’abandon des activités extractives menées dans beaucoup de pays développés, notamment en Europe et tout particulièrement en France. 
+La maîtrise du numérique passe par celle de la chaîne d’approvisionnement en ces ressources terrestres, jugées critiques jusque dans les rapports de l’UE. Or leur extraction se trouve aujourd’hui concentrée dans un petit nombre de pays. La Chine produit 95\% des terres rares consommées dans le monde et plus de 50\% de 13 autres minerais, dont le gallium, l’indium et même le silicium, élément pourtant très abondant sur terre. L’Afrique du Sud concentre 70\% de la production de platine et plus de 80\% de celle des autres platinoïdes, le Chili 80\% de celle du niobium, la République démocratique du Congo deux tiers de celle du cobalt\cite{eucriticalrawmaterials}. Ce déséquilibre résulte de la mondialisation des échanges et de la circulation des capitaux~: l’extraction des ressources terrestres est privilégiée dans les régions du monde où son coût est le plus bas, du fait d’une concentration en minerai relativement plus élevée ou d’un faible coût du travail –-- souvent des deux à la fois. Elle résulte aussi de politiques délibérées d’abandon des activités extractives menées dans beaucoup de pays développés, notamment en Europe et tout particulièrement en France. 
 
 L’extrême déséquilibre mondial de la production des métaux rares est une source potentielle de ruptures d’approvisionnement et de crises productives, voire de conflits. La République Populaire de Chine, par exemple, n’hésite pas à utiliser son quasi-monopole comme levier de négociation comme lors du conflit des îles Senkaku-Diaoyu ou en 2018, lors du bras de fer avec l’administration Trump. 
 
